--- a/css/style.css
+++ b/css/style.css
@@ -49,12 +49,14 @@ header a:hover {
     background-color: var(--white) !important;
     display: block;
     overflow: hidden;
+    margin: 20px;
 }
 
 .Portrait img {
     object-fit: cover;
     object-position: center;
     height: 100%;
+    max-height: 38vh;
 
 }
 
@@ -66,10 +68,13 @@ header a:hover {
     object-fit: cover;
     object-position: center;
     height: 100%;
+    max-height: 28vh;
 }
 
 .work {
     display: block;
+    margin-right: 1vw;
+    margin-left: 1vw;
 }
 
 /* media query */
