added about me section and contact form - non fuction without php - needs review

--- a/css/style.css
+++ b/css/style.css
@@ -121,7 +121,12 @@ header a:hover {
 
 }
 
+.contact-me {
+    margin: 12%;
+}
+
 /* Skills Section */
+
 
 /* media query */
 @media only screen and (max-width: 600px) {
